--- a/config/_default/languages.yaml
+++ b/config/_default/languages.yaml
@@ -1,6 +1,6 @@
 en:
   languageName: English
-  languageAltTitle: "English"
+  # languageAltTitle: "English"
   weight: 1
   # taxonomies:
   #   category: categories
