et hop ca va planter

--- a/config/_default/menu.yaml
+++ b/config/_default/menu.yaml
@@ -1,21 +1,22 @@
 main:
-  - name: About
-    url: about/
-    weight: 1
-  - name: Posts
-    url: posts/
-    weight: 2
-  - name: Categories
-    url: categories/
-    weight: 3
-  # - identifier: categories
-  #   name: categories
-  #   url: /categories/
-  #   weight: 4
-  - identifier: tags
-    name: tags
-    url: /tags/
-    weight: 4
-  - name: Search
-    url: search/
-    weight: 5
+- identifier: archive
+  name: Archive
+  title: Archive
+  url: /posts/
+  weight: 0
+- name: About
+  url: about/
+  weight: 1
+- name: Posts
+  url: posts/
+  weight: 2
+- name: Categories
+  url: categories/
+  weight: 3
+- identifier: tags
+  name: tags
+  url: /tags/
+  weight: 4
+- name: Search
+  url: search/
+  weight: 5
