--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@16361eb4acea8698b220b76c0d4e84e1fd22c61d
         with:
-          hugo-version: "latest"
+          hugo-version: "0.145.0"
           extended: true
       
       # Creates ./public directory
@@ -42,8 +42,8 @@ jobs:
           # github_token: ${{ secrets.GITHUB_TOKEN }}
           personal_token: ${{secrets.GH_TOKEN}}
           publish_dir: ./public
-          external_repository: emmanuel-amadio/emmanuel-amadio.github.io
+          external_repository: emmanuel-io/emmanuel-io.github.io
           publish_branch: main
-          user_name: emmanuel-amadio
+          user_name: emmanuel-io
           user_email: emmanuel.amadio@mail.com
 
