add opengraph and twittercard

--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -93,3 +93,7 @@ services:
     disableInlineCSS: true
   x:
     disableInlineCSS: true
+
+# Enable Open Graph & Twitter
+enableOpenGraph: true
+enableTwitterCards: true
